# IUT-INFO-UGA

./: .gitignore  README.md
R1.01/: cherche-class
R1.01/ControleMachine_R101_2023_2024/: InfoIles.txt  Polars.txt
R1.01/TP1/: .~lock.Untitled 1.odt#  Untitled 1.odt
R1.01/TP1_Files/: Es.java
R1.02/TP1/: cv.html  cv3.html  cvnul.html
R1.02/TP2/: stylePage1.css
R1.02/TP6/: tp6.js  tp6.scss
R2.01a/: allpackages-index.html  element-list  help-doc.html  index.html  overview-summary.html  overview-tree.html
R2.01a/conf/: debug- logging.properties
R2.06/TP2/: proches.csv  tp2.sql
R2.06/TP4/: tp03.sql
R2.06/TP5/: compte rendu.sql
R2.06/TP6/: compte rendu.sql
R2.06/TP7/: TP7.sql
R2.06/controle final/: create_base.sql  diiorioe.sql  reponses.sql  user.txt
S1/R1.03/: cours.md
S1/R1.08/: cours.md
S1/R1.10b/: controle prise de notes.mdd  cours.md
S1/R1.11/: cours.md  ds.md  l'arumentation un exercice de subjectivité  preparation oral 180s.md  prise de notes.xmind  revue de presse.txt
S2/R2.04a/: legal.md
S2/R2.04b R2.05/: R2.04b – R2.05 – Réseaux  Travaux dirigé.md
S2/R2.06/: R2.06.md
S2/R2.08/: TP1_2024.R
S2/R2.10A/: exercice.md
S2/R2.10B/: TD4 planification.docx  exercice 2.drawio  gestoin de projet.md
S3/R3.02/controle/: CMakeLists.txt
S3/R3.02/controle/partie1/: CellInt.h  ListeInt.cpp  ListeInt.h
S3/R3.02/controle/partie2/: ArbreBinaireInt.cpp  NoeudBinaireInt.cpp  prettyPrint.cpp  prettyPrint.h
S3/R3.02/controle/partie3/: Mondial.cpp  PrecondVioleeExcep.h  testMondial.cpp
config/: debug- logging.properties
(+668 files in other folders)
